added video and sound

--- a/css/about.css
+++ b/css/about.css
@@ -14,3 +14,16 @@
     font-size: 2vw;
     color: white;
 }
+.videobox{
+    width: 85vw;
+    height: 25vw;
+    border: #8B7E6E solid 2px;
+    border-radius: 8px;
+    margin-left: 65px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    background-color: #8b7e6e73;
+}
+.video{
+    padding-left: 25vw;
+}
