--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,11 @@ footer a{
     text-decoration: none;
     color: #8B7E6E;  
 }
+.jj{
+    max-width: 2%;
+    max-height: 2%;
+    transform: scale(8);
+    /* float: left;  */
+    margin-left: 15px;
+    margin-top: 145px;
+}
