--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 .skillsbox{
     width: 85vw;
-    height: 25vw;
+    height: 45vw;
     border: #8B7E6E solid 2px;
     border-radius: 8px;
     margin-left: 65px;
@@ -15,6 +15,7 @@
     color: white;
     line-height: 1.2;
     text-align: center;
+    padding-top: 8vw;
 }
 .videobox{
     width: 85vw;
@@ -22,10 +23,11 @@
     border: #8B7E6E solid 2px;
     border-radius: 8px;
     margin-left: 65px;
-    margin-top: 20px;
+    margin-top: 25px;
     margin-bottom: 10px;
     background-color: #8b7e6e73;
 }
 .video{
     padding-left: 25vw;
+    padding-top: 1.5vw;
 }
